Release-v4.1.0 Merge develop into main (#2650)
* refactor: TAP-5877 TM and Engine Upgrade dependencies

* chore: 更新 GitHub Actions 工作流配置，移除 SSH 配置并简化 Gitee 克隆地址，确保代码库的访问更加顺畅。

* chore: 更新 GitHub Actions 工作流配置，修复 tapdata-web 克隆过程中的目录切换问题，确保 rsync 正确执行。

* fix(iengine):TAP-5866 inspect support null sort

* refactor: TAP-5877 TM and Engine Upgrade dependencies

* fix: TAP-5970 adjust startPlanCronTaskLock lockAtMostFor to 30s

* fix(iengine):update version

* fix：sort on add null sort

* fix(tm):update import

* Downgrade kubernetes client version

* fix:version problem

* fix: add unit tests

* fix: preview npe

* fix(tm):Frontend can not display docs

* fix: The preview function will be stuck

* refactor: TAP-5877 Engine add http util

* refactor: TAP-5877 TM Upgrade spring version

* fix:HazelcastPreviewSourcePdkDataNodeTest test case

* fix: Fix null pointer exception tested by unit test

* fix: TAP-6077 resolve oom when find inspect result

* 更新mr-ci.yaml文件，升级Java版本至17，并调整构建配置的client_payload格式以包含JAVA_VERSION信息。

* 更新mr-ci.yaml文件，将Java版本降级至1.8.0_202，并相应调整JAVA_HOME配置。

* fix: TAP-5980 Try again when the engine transform schema calls the TM interface and returns 503

* fix: TAP-6077 resolve oom when find inspect result

* fix: TAP-5980 TmUnavailableException need to retry for cloud

* fix: table comment missing

* fix: Fix failed unit tests

* fix: Fix failed unit tests

* add mcp server

* Update RELEASE

Update RELEASE

* fix: update chronicle-queue version

* fix: rollback chronicle-queue version

* 更新 mr-ci.yaml，调整 client_payload 格式，新增 LISENSE_BRANCH 字段以支持构建配置。

* feat: TAP-6004 add subPart to TapIndexField

* fix: TAP-6181 External storage entity/dto, add attrs attribute

Closes TAP-6181

* fix: 更新 mr-ci.yaml，调整 client_payload 格式，修复 CONNECTORS-OPTIONS 字段的重复定义。

* fix: 更新 mr-ci.yaml，调整 Scan-Tapdata 任务的条件，增加对调度事件和 tapce_run 输入的检查。

* feat: TAP-6196 support table selector with OnlyPrimaryKey and OnlyUniqueIndex

* feat: TAP-6196 fix unit test

* feat: TAP-6196 supp